2번째 수정판

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   I am a student at Chnonnam National University. My study focuses on the plant pathology, horticulture, facility farming. Also,
   I got a minor degree of Computer Sience. It is my favorite hobby in my life.
   I am trying to study more and more, That is why I got a minor degree.
-  I am really looking forward to work in IT company for app or web developer.
+  I am really looking forward to work in IT company for app or web developer.😃
   <br />
   <br />
   Link to : <a href="contact.html">Contact</a> information.
@@ -78,7 +78,7 @@
       </tr>
       <tr>
         <td>2018 March - 2018 August</td>
-        <td>Resercher Internship in RDA</td>
+        <td>Resercher Internship in RDA(Rural Development Administration)</td>
       </tr>
       <tr>
         <td>2017 July for a month</td>
@@ -96,7 +96,7 @@
         <table>
           <tr>
             <td>ios Deevelopment</td>
-            <td>🍎🍎🍎</td>
+            <td>🍎</td>
           </tr>
           <tr>
             <td>Web Development</td>
@@ -104,7 +104,7 @@
           </tr>
           <tr>
             <td>Plant pathology</td>
-            <td>🍎🍎🍎</td>
+            <td>🍎🍎🍎🍎🍎</td>
           </tr>
         </table>
       </td>
@@ -112,7 +112,7 @@
         <table>
           <tr>
             <td>Plant physiology</td>
-            <td>🍎🍎🍎</td>
+            <td>🍎🍎🍎🍎</td>
           </tr>
           <tr>
             <td>Python</td>
