3번째 릴리즈~

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   I am a student at Chnonnam National University. My study focuses on the plant pathology, horticulture, facility farming. Also,
   I got a minor degree of Computer Sience. It is my favorite hobby in my life.
   I am trying to study more and more, That is why I got a minor degree.
-  I am really looking forward to work in IT company for app or web developer.😃
+  I am really looking forward to work in IT & Agricultre company for developer.😃
   <br />
   <br />
   Link to : <a href="contact.html">Contact</a> information.
